fix: enable git dates, fix math config, and fix broken person links
- Uncomment git-revision-date-localized plugin for "last updated" timestamps
- Fix pymdownx.arithmatex config (add generic: true) and add MathJax JS
- Fix Klara's broken wieiswie person ID (00116473 → 00116743) in 3 files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,7 +134,8 @@ markdown_extensions:
   - footnotes
   - admonition
   - meta
-  - pymdownx.arithmatex
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.betterem
   - pymdownx.caret
   - pymdownx.inlinehilite
@@ -168,12 +169,16 @@ plugins:
 #  - privacy
   - search
   - git-authors
-#  - git-revision-date-localized:
-#      type: datetime
-#      timezone: Europe/Brussels
+  - git-revision-date-localized:
+      type: datetime
+      timezone: Europe/Brussels
 
 extra_css:
   - stylesheets/extra.css
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 extra:
   consent:
