fix: harmonize color palette for light/dark mode and enable privacy plugin
Derive all color variants from primary #44546A (slate blue-grey):
- Root: replace unrelated pink/red variants with proper light/dark shades
- Light mode: links stay in blue family (no purple hover jump)
- Dark mode: cohesive cool-blue palette (no turquoise/lilac/peach mix)
- Lists: use CSS variables instead of hardcoded #444 (fixes dark mode)
- .pre code: use --md-code-bg-color instead of hardcoded #f5f5f5
- H1 gradient: primary → primary-light instead of unrelated purple
- Remove duplicate img:active rule

Enable privacy plugin for GDPR compliance.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -165,7 +165,7 @@ markdown_extensions:
 
 plugins:
   - offline
-#  - privacy
+  - privacy
   - search
   - git-authors
 #  - git-revision-date-localized:
