ci: add daily schedule trigger to docs tag scanner
Adds a daily cron (07:00 UTC / 08:00 Brussels) to the manage-docs-tags
workflow so orphaned tags that were missed by push-triggered scans are
caught automatically.

--- a/.github/workflows/manage-docs-tags.yml
+++ b/.github/workflows/manage-docs-tags.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: '0 7 * * *'  # Daily at 07:00 UTC (08:00 Brussels winter / 09:00 summer)
   issue_comment:
     types: [created]
   workflow_dispatch:
