--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
           - 2. Preprocessing: research/eeg/analysis/eeg-preprocessing.md
           - 3. Multivariate analysis: research/eeg/analysis/eeg-multivariate.md
           - 4. Statistical testing: research/eeg/analysis/eeg-statistics.md
+          - 5. EEG and eye-tracking: research/eeg/analysis/eeg-eyetracking.md
           - EEG analysis in MATLAB: research/eeg/analysis/eeg-matlab.md
           - EEG workflow example: research/eeg/analysis/eeg-workflow.md
 #    - Eye-tracking:
