--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,11 +71,12 @@ nav:
       - Analysis workflow:
           - research/eeg/analysis/index.md
           - 0. Set up your environment: research/eeg/analysis/eeg-setup-env.md
-          - 1. Quality control: research/eeg/analysis/eeg-quality-control.md
-          - 2. Preprocessing: research/eeg/analysis/eeg-preprocessing.md
-          - 3. Multivariate analysis: research/eeg/analysis/eeg-multivariate.md
-          - 4. Statistical testing: research/eeg/analysis/eeg-statistics.md
-          - 5. EEG and eye-tracking: research/eeg/analysis/eeg-eyetracking.md
+          - 1. Organise your data: research/eeg/analysis/eeg-bids-conversion.md
+          - 2. Quality control: research/eeg/analysis/eeg-quality-control.md
+          - 3. Preprocessing: research/eeg/analysis/eeg-preprocessing.md
+          - 4. Multivariate analysis: research/eeg/analysis/eeg-multivariate.md
+          - 5. Statistical testing: research/eeg/analysis/eeg-statistics.md
+          - 6. EEG and eye-tracking: research/eeg/analysis/eeg-eyetracking.md
           - EEG analysis in MATLAB: research/eeg/analysis/eeg-matlab.md
           - EEG workflow example: research/eeg/analysis/eeg-workflow.md
 #    - Eye-tracking:
